test/compile_errors/err_goto_cross_closure_boundary.w
//! expect-check-fail: undefined goto target 'outer

fn main:
    let f = () => goto 'outer
    f()
    'outer return
